first working version

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 VITE_GOOGLE_SHEET_ID=1oFX6K62-bA2b2TugVy4_tTnNvJQNloQGiIlHrG15tiU
-VITE_GOOGLE_API_KEY=AIzaSyCFVIp0o6lVtiIeFpPhNhW71DhsUhCBUtU
+VITE_GOOGLE_API_KEY=AIzaSyBSOBMIPdyLoFsLzVPk7Fs1IHFNpDZEh0A
+
+# EmailJS Configuration
+# Get these values from your EmailJS dashboard:
+# 1. Service ID: Email Services > [Your Service] > Service ID
+# 2. Template ID: Email Templates > [Your Template] > Template ID
+# 3. Public Key: Account > API Keys > Public Key
+VITE_EMAILJS_SERVICE_ID=til
+VITE_EMAILJS_TEMPLATE_ID=nextdaymvpcontact
+VITE_EMAILJS_PUBLIC_KEY=8K5eBfHC9PsMWbwTt
