--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@formspree/react": "^2.5.1",
+    "@headlessui/react": "^2.2.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
@@ -19,8 +20,10 @@
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.344.0",
+    "openai": "^4.85.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-media-recorder": "^1.7.1",
     "react-router-dom": "^6.22.3",
     "swr": "^2.3.2",
     "tailwind-merge": "^3.0.1"
