--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@emailjs/browser": "^4.4.1",
     "@formspree/react": "^2.5.1",
     "@headlessui/react": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
+    "framer-motion": "^12.4.7",
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.344.0",
     "openai": "^4.85.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.0.0",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^6.22.3",
     "swr": "^2.3.2",
