--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formspree/react": "^2.5.1",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/three": "^0.174.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
@@ -29,7 +30,8 @@
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^6.22.3",
     "swr": "^2.3.2",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
