--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@formspree/react": "^2.5.1",
     "@headlessui/react": "^2.2.0",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.72",
     "@tailwindcss/typography": "^0.5.16",
     "@types/three": "^0.174.0",
     "clsx": "^2.1.1",
