--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
 VITE_GOOGLE_SHEET_ID=1oFX6K62-bA2b2TugVy4_tTnNvJQNloQGiIlHrG15tiU
 VITE_GOOGLE_API_KEY=AIzaSyBSOBMIPdyLoFsLzVPk7Fs1IHFNpDZEh0A
 
-# EmailJS Configuration
-# Get these values from your EmailJS dashboard:
-# 1. Service ID: Email Services > [Your Service] > Service ID
-# 2. Template ID: Email Templates > [Your Template] > Template ID
-# 3. Public Key: Account > API Keys > Public Key
-VITE_EMAILJS_SERVICE_ID=til
-VITE_EMAILJS_TEMPLATE_ID=nextdaymvpcontact
-VITE_EMAILJS_PUBLIC_KEY=8K5eBfHC9PsMWbwTt
+# OpenAI API Key for Whisper and GPT-4
+# VITE_OPENAI_API_KEY=your_openai_api_key_here
