updated .env files setup

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-# OpenAI API Key for Whisper and GPT-4
+# Environment Variables Example File
+# Copy this file to .env and replace the placeholder values with your actual API keys
+# IMPORTANT: Never commit your actual .env file to version control!
+
+# OpenAI API Keys
+# Used for voice transcription, idea processing, and image generation
 VITE_OPENAI_API_KEY=your_openai_api_key_here
 
-# Google Sheets API for Recent Projects
+# Google Sheets API 
+# Used for fetching recent projects data
 VITE_GOOGLE_SHEET_ID=your_google_sheet_id_here
 VITE_GOOGLE_API_KEY=your_google_api_key_here
