--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ VITE_OPENAI_API_KEY=your_openai_api_key_here
 # Used for fetching recent projects data
 VITE_GOOGLE_SHEET_ID=your_google_sheet_id_here
 VITE_GOOGLE_API_KEY=your_google_api_key_here
+
+# Stability AI API
+# Used for app icon generation
+VITE_STABILITY_API_KEY=your_stability_api_key_here
